feat: 添加自動部屬github設定

--- a/angular.json
+++ b/angular.json
@@ -106,6 +106,14 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "/metawall-fontend/",
+            "name": "charlie50503",
+            "email": "cate50503@gmail.com"
+          }
         }
       }
     }
