--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build2": "ng build --configuration production --base-href=/metawall_fontend/",
+    "build2": "ng build --configuration production --base-href=/metawall_fontend/ && cd ./docs && cp index.html 404.html",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
