deploy: 修改自動化部屬設定

--- a/angular.json
+++ b/angular.json
@@ -110,7 +110,7 @@
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
           "options": {
-            "baseHref": "/metawall-fontend/",
+            "baseHref": "/metawall_fontend/",
             "name": "charlie50503",
             "email": "cate50503@gmail.com"
           }
