--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -25,4 +25,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           npm install
+          npm run build2
           npm run ng -- deploy --no-silent
