deploy: add baseHref

--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "baseHref": "/metawall_fontend/",
             "outputPath": "docs",
             "index": "src/index.html",
             "main": "src/main.ts",
